--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1 style="text-align: center; color: #2c3e50;">WPPOOL Growth Analytics Dashboard</h1>
+    <h2> <a href="profile_report.html">Click to see data profiling report</a></h2>
     <h1>Data Exploration & Cleaning</h1>
 <p>Total Users: 20000</p>
 <p>Free Users: 79.86%</p>
